remove all AMD like behaviour to prevent conflicting

--- a/tools/src/devserver/views/demo.ejs
+++ b/tools/src/devserver/views/demo.ejs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/assets/vendor/css/font-awesome.min.css" />
     <script type="text/javascript" src="/build/js/templates.js"></script>
     <% if(build) { %>
-        <script type="text/javascript" src="/build/rjsoutput.js"></script>    
+        <script type="text/javascript" src="/build/js/razorflow.min.js"></script>    
     <% }  else { %>
         <script type="text/javascript" src="/assets/vendor/js/require.min.js"></script>
         <script type="text/javascript" src="/assets/dev/requireConfig.js"></script>
