--- a/tools/src/devserver/views/demo.ejs
+++ b/tools/src/devserver/views/demo.ejs
@@ -19,7 +19,7 @@
 
 </head>
 <body>
-<div id="dbTarget" style='position: relative;width: 80%' class='rf rf-click rf-lg'>
+<div id="dbTarget" style='position: relative;' class='rf rf-click rf-lg'>
 </div>
 <script>
     <% if(!build) { %> 
