try to fallback to jquery

--- a/tools/src/devserver/views/demo.ejs
+++ b/tools/src/devserver/views/demo.ejs
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="/build/css/razorflow.css" />
     <link rel="stylesheet" href="/assets/vendor/css/font-awesome.min.css" />
     <script type="text/javascript" src="/build/js/templates.js"></script>
+    <!--[if lte IE 9]>
+        <script type="text/javascript" src="/assets/vendor/js/jquery.min.js"></script>
+    <![endif]-->
     <% if(build) { %>
         <script type="text/javascript" src="/build/js/razorflow.min.js"></script>    
     <% }  else { %>
