Added production settings and screenshot generator

--- a/internal/views/dev/index.twig
+++ b/internal/views/dev/index.twig
@@ -7,10 +7,10 @@
 <body>
 <h1>JavaScript</h1>
 <h2>Demos</h2>
-{{ macros.exampleList (examples, 'js', 'demos') }}
+{{ macros.devExampleList (examples, 'js', 'demos') }}
 <h2>Examples</h2>
-{{ macros.exampleList (examples, 'js', 'examples') }}
+{{ macros.devExampleList (examples, 'js', 'examples') }}
 <h2>Testcases</h2>
-{{ macros.exampleList (examples, 'js', 'testcases') }}
+{{ macros.devExampleList (examples, 'js', 'testcases') }}
 </body>
 </html>
