Added support for PHP in the example browser

--- a/internal/views/dev/index.twig
+++ b/internal/views/dev/index.twig
@@ -12,5 +12,14 @@
 {{ macros.devExampleList (examples, 'js', 'examples') }}
 <h2>Testcases</h2>
 {{ macros.devExampleList (examples, 'js', 'testcases') }}
+
+
+<h1>PHP</h1>
+<h2>Demos</h2>
+{{ macros.devExampleList (examples, 'php', 'demos') }}
+<h2>Examples</h2>
+{{ macros.devExampleList (examples, 'php', 'examples') }}
+<h2>Testcases</h2>
+{{ macros.devExampleList (examples, 'php', 'testcases') }}
 </body>
 </html>
