--- a/internal/views/prod/index.twig
+++ b/internal/views/prod/index.twig
@@ -10,5 +10,11 @@
 {{ macros.prodExampleList (examples, 'js', 'demos') }}
 <h2>Examples</h2>
 {{ macros.prodExampleList (examples, 'js', 'examples') }}
+
+<h1>PHP</h1>
+<h2>Demos</h2>
+{{ macros.prodExampleList (examples, 'php', 'demos') }}
+<h2>Examples</h2>
+{{ macros.prodExampleList (examples, 'php', 'examples') }}
 </body>
 </html>
