--- a/internal/views/prod/jsExample.twig
+++ b/internal/views/prod/jsExample.twig
@@ -2,11 +2,10 @@
 <html>
 <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" href="/static/rf/css/razorflow.css" />
+    <link rel="stylesheet" href="/static/rf/css/razorflow.min.css" />
     <!--[if lte IE 9]>
         <script type="text/javascript" src="/static/rf/js/jquery.min.js"></script>
     <![endif]-->
-    <script type="text/javascript" src="/static/rf/js/templates.js"></script>
     <script type="text/javascript" src="/static/rf/js/razorflow.min.js"></script>
 </head>
 <body>
