--- a/internal/views/dev/jsIncludes.twig
+++ b/internal/views/dev/jsIncludes.twig
@@ -1,4 +1,4 @@
-    <link rel="stylesheet" href="/devStatic/jsrfBuild/tmp/razorflow.css" />
+    <link rel="stylesheet" href="/devStatic/jsrfBuild/assets/css/razorflow.min.css" />
     <!--[if lte IE 9]>
         <script type="text/javascript" src="/devStatic/jsrf/vendor/js/jquery.min.js"></script>
     <![endif]-->
