use lang template variable in macros for correct github linking

--- a/internal/views/macros.twig
+++ b/internal/views/macros.twig
@@ -11,7 +11,7 @@
 {% for item in examples[lang][type] %}
 	<section class="section">		
 			<span class="subtitles"><a href="/dashboard/{{ lang }}/{{ type }}/{{ item }}">{{ item }}</a></span> |
-			<span class="github"><a href="https://github.com/RazorFlow/examples/blob/master/src/js/{{ type }}/{{ item }}.{{ lang }}" target="_blank">view on Github</a></span>
+			<span class="github"><a href="https://github.com/RazorFlow/examples/blob/master/src/{{ lang }}/{{ type }}/{{ item }}.{{ lang }}" target="_blank">view on Github</a></span>
 	</section>
 {% endfor %}
 
