--- a/internal/views/macros.twig
+++ b/internal/views/macros.twig
@@ -1,19 +1,24 @@
 {% macro devExampleList (examples, lang, type) %}
 <ul>
 {% for item in examples[lang][type] %}
-	<li><a href="/dev/{{ lang }}/{{ type }}/{{ item }}">{{ item }}</a></li>
+	<li><a href="/dev/{{ lang }}/{{ type }}/{{ item.basename }}">{{ item.basename }}</a></li>
 {% endfor %}
 </ul>
 {% endmacro %}
 
 {% macro prodExampleList (examples, lang, type, swa) %}
-{{ swa }}
 <ul>
 {% for item in examples[lang][type] %}
-	<li>
-	  <p><a href="/dashboard/{{ lang }}/{{ type }}/{{ item }}">{{ item }}</a></p>
-	  <p><a href="https://github.com/RazorFlow/examples/blob/master/src/js/{{ type }}/{{ item }}.{{ lang }}">View On Github</a></p>
-	</li>
+<section class="section">
+  <span class="subtitles"><a href="/dashboard/{{ lang }}/{{ type }}/{{ item.basename }}">
+  {% if(item.meta.title is defined) %}
+  {{ item.meta.title }}
+  {% else %}
+  {{ item.basename }}
+  {% endif %}
+  </a></span> | 
+  <span class="github"><a href="https://github.com/RazorFlow/examples/blob/master/src/{{ lang }}/{{ type }}/{{ item.basename }}.{{ lang }}" target="_blank">view on Github</a></span>
+</section>
 {% endfor %}
 </ul>
 {% endmacro %}
