Changed some examples for annotations

--- a/internal/views/dev/jsIncludes.twig
+++ b/internal/views/dev/jsIncludes.twig
@@ -2,6 +2,7 @@
     <!--[if lte IE 9]>
         <script type="text/javascript" src="/devStatic/jsrf/vendor/js/jquery.min.js"></script>
     <![endif]-->
+        <script src='https://cdn.firebase.com/v0/firebase.js'></script>
         <script type="text/javascript" src="/devStatic/jsrf/vendor/js/require.min.js"></script>
         <script type="text/javascript" src="/devStatic/jsrf/dev/requireConfig.js"></script>
         <script type="text/javascript">
