added html example options

--- a/internal/views/dev/index.twig
+++ b/internal/views/dev/index.twig
@@ -21,5 +21,15 @@
 {{ macros.devExampleList (examples, 'php', 'examples') }}
 <h2>Testcases</h2>
 {{ macros.devExampleList (examples, 'php', 'testcases') }}
+
+
+<h1>HTML</h1>
+<h2>Demos</h2>
+{{ macros.devExampleList (examples, 'html', 'demos') }}
+<h2>Examples</h2>
+{{ macros.devExampleList (examples, 'html', 'examples') }}
+<h2>Testcases</h2>
+{{ macros.devExampleList (examples, 'html', 'testcases') }}
+
 </body>
 </html>
