--- a/internal/views/dev/jsExample.twig
+++ b/internal/views/dev/jsExample.twig
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 {{ include('dev/jsIncludes.twig') }}
 <script>
     require(["core/main"], function (rf) {    
