add amazing new testhelper

--- a/internal/views/dev/jsTest.twig
+++ b/internal/views/dev/jsTest.twig
@@ -11,6 +11,7 @@
   <script type="text/javascript" src="/static/jasmine/jasmine-html.js"></script>
   <script type="text/javascript" src="/static/jasmine/boot.js"></script>
   <script type="text/javascript" src="/static/jasmine/jasmine-jsreporter.js"></script>
+  <script type="text/javascript" src="/static/internal/js/rfTestHelper.js"></script>
 
 {{ include('dev/jsIncludes.twig') }}
 <script>
