--- a/internal/views/prod/jsTest.twig
+++ b/internal/views/prod/jsTest.twig
@@ -12,6 +12,8 @@
   <script type="text/javascript" src="/static/jasmine/boot.js"></script>
   <script type="text/javascript" src="/static/jasmine/jasmine-jsreporter.js"></script>
   <script type="text/javascript" src="/static/internal/js/rfTestHelper.js"></script>
+  <link rel="stylesheet" href="/static/rf/css/razorflow.min.css" />
+  <script type="text/javascript" src="/static/rf/js/razorflow.min.js"></script>
 
 {{ include('dev/jsIncludes.twig') }}
 <script>
