updated tests with more accuracy

--- a/internal/views/prod/jsTest.twig
+++ b/internal/views/prod/jsTest.twig
@@ -17,7 +17,7 @@
 
 {{ include('dev/jsIncludes.twig') }}
 <script>
-    require(["core/main"], function (rf) {
+    $(function() {
         {{ file_contents|raw }}
         window.jasmineExecute();
     });
