put t3 on a submodule

--- a/internal/views/dev/jsTest.twig
+++ b/internal/views/dev/jsTest.twig
@@ -11,7 +11,7 @@
   <script type="text/javascript" src="/static/jasmine/jasmine-html.js"></script>
   <script type="text/javascript" src="/static/jasmine/boot.js"></script>
   <script type="text/javascript" src="/static/jasmine/jasmine-jsreporter.js"></script>
-  <script type="text/javascript" src="/static/internal/js/rfTestHelper.js"></script>
+  <script type="text/javascript" src="/static/t3/src/t3.js"></script>
 
 {{ include('dev/jsIncludes.twig') }}
 <script>
