--- a/internal/views/prod/jsTest.twig
+++ b/internal/views/prod/jsTest.twig
@@ -11,7 +11,7 @@
   <script type="text/javascript" src="/static/jasmine/jasmine-html.js"></script>
   <script type="text/javascript" src="/static/jasmine/boot.js"></script>
   <script type="text/javascript" src="/static/jasmine/jasmine-jsreporter.js"></script>
-  <script type="text/javascript" src="/static/internal/js/rfTestHelper.js"></script>
+  <script type="text/javascript" src="/static/t3/src/t3.js"></script>
   <link rel="stylesheet" href="/static/rf/css/razorflow.min.css" />
   <script type="text/javascript" src="/static/rf/js/razorflow.min.js"></script>
 
