Added debug to production

--- a/internal/views/prod/jsExample.twig
+++ b/internal/views/prod/jsExample.twig
@@ -7,6 +7,7 @@
         <script type="text/javascript" src="/static/rf/js/jquery.min.js"></script>
     <![endif]-->
     <script type="text/javascript" src="/static/rf/js/razorflow.min.js"></script>
+    <script type="text/javascript" src="/static/rf/js/razorflow.devtools.min.js"></script>
 </head>
 <body>
 <div id="dbTarget" style='position: relative;' class='rf rf-click rf-lg'>
