testcases added for show legend and set start string in both php and js

--- a/internal/views/dev/index.twig
+++ b/internal/views/dev/index.twig
@@ -21,6 +21,8 @@
 {{ macros.devExampleList (examples, 'php', 'examples') }}
 <h2>Testcases</h2>
 {{ macros.devExampleList (examples, 'php', 'testcases') }}
+<h2>Tour</h2>
+{{ macros.devExampleList (examples, 'php', 'tour') }}
 
 
 <h1>HTML</h1>
