--- a/internal/views/dev/jsIncludes.twig
+++ b/internal/views/dev/jsIncludes.twig
@@ -1,4 +1,5 @@
-    <link rel="stylesheet" href="/devStatic/jsrfBuild/tmp/razorflow.css" />
+        <link rel="stylesheet" href="/devStatic/jsrfBuild/tmp/razorflow.css" />
+        <script type="text/javascript" src="/static/internal/js/jquery.min.js"></script>
         <script type="text/javascript" src="/devStatic/jsrf/vendor/js/require.min.js"></script>
         <script type="text/javascript" src="/devStatic/jsrf/dev/requireConfig.js"></script>
         <script type="text/javascript">
