made prod mode checker work as well

--- a/examples/internal/views/prod/jsExample.twig
+++ b/examples/internal/views/prod/jsExample.twig
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" href="/static/rf/css/razorflow.min.css" />
-    <script type="text/javascript" src="/static/rf/js/jquery.min.js"></script>
-    <script type="text/javascript" src="/static/rf/js/razorflow.min.js"></script>
-    <script type="text/javascript" src="/static/rf/js/razorflow.devtools.min.js"></script>
+    <link rel="stylesheet" href="/mount/jsrfBuild/css/razorflow.min.css" />
+    <script type="text/javascript" src="/mount/jsrfBuild/js/jquery.min.js"></script>
+    <script type="text/javascript" src="/mount/jsrfBuild/js/razorflow.min.js"></script>
+    <script type="text/javascript" src="/mount/jsrfBuild/js/razorflow.devtools.min.js"></script>
 </head>
 <body>
 <div id="dbTarget" style='position: relative;' class='rf rf-click rf-lg'>
