--- a/docs/src/templates/default/api_templates/nav.ejs
+++ b/docs/src/templates/default/api_templates/nav.ejs
@@ -1,3 +1,3 @@
 <% for(i=0; i<items.length; i++) {%>
-    <li> <a href="<%= items[i] %>.php"><%= items[i] %></a></li>    
+    <li> <a href="<%= items[i] %>.html"><%= items[i] %></a></li>    
 <% } %>
