fixed undefined for method permalink in docs template

--- a/docs/src/templates/razorflow_dotcom/api_templates/method.ejs
+++ b/docs/src/templates/razorflow_dotcom/api_templates/method.ejs
@@ -1,6 +1,6 @@
-<div id="<%= item.method.name %>" class='rfApiMethod'>
+<div id="<%= item.method %>" class='rfApiMethod'>
     
-    <h3><a class="rfPermalink" href="#<%= item.method.name %>">Permalink</a><%= item.method %></h3>
+    <h3><a class="rfPermalink" href="#<%= item.method %>">Permalink</a><%= item.method %></h3>
     <hr/>
     <p>
         <code><%= item.signature %></code>
