removed link prefix in template

--- a/docs/src/templates/razorflow_dotcom/api_templates/layout.ejs
+++ b/docs/src/templates/razorflow_dotcom/api_templates/layout.ejs
@@ -43,7 +43,7 @@ require $_SERVER['DOCUMENT_ROOT']."/layout/header.php";
 ?>
 <div class="col-md-12 rfDocHeader">
   <div class="container">
-    <div class="col-xs-12 col-sm-8 topBarTitle"><h2><a href="<%= options.linkPrefix %>/<%= options.langUrl %>"><%= options.topBarTitle %></a></h2></div>
+    <div class="col-xs-12 col-sm-8 topBarTitle"><h2><a href="<%= options.langUrl %>"><%= options.topBarTitle %></a></h2></div>
     <div class="form-group col-xs-12 col-sm-4">
         <form id="docs_search" action="/search/site.php" method="get">
           <div class="input-group search-box">
