Fixed the title for the doc pages with the current article or api class title

--- a/docs/src/templates/razorflow_dotcom/article_templates/layout.ejs
+++ b/docs/src/templates/razorflow_dotcom/article_templates/layout.ejs
@@ -1,6 +1,6 @@
 <?php 
 function custom_title () {
-    return "Documentation";
+    return "<%= title %> | Documentation";
 }
 
 function extra_scripts () {
