added a min-height to the chart tooltip label and value
Test Plan: no test plan

Reviewers: anirudh

Reviewed By: anirudh

JIRA Issues: RF-64

Differential Revision: http://phabricator.razorflow.com/D6

--- a/jsrf/src/less/tooltip.less
+++ b/jsrf/src/less/tooltip.less
@@ -27,11 +27,13 @@
         font-size: 12px;
         font-weight: bold;
         float: right;
+        min-height: 12px;
     }
 
     .rfTooltipLabel {
         font-size: 12px;
         float: left;
+        min-height: 12px;
     }
 
     .downArrow {
