--- a/docs/src/templates/razorflow_dotcom/article_templates/layout.ejs
+++ b/docs/src/templates/razorflow_dotcom/article_templates/layout.ejs
@@ -31,7 +31,7 @@ function extra_styles() {
 if(!function_exists('rf_trackpage')) {
     function rf_trackpage () {
         return array (
-            'name' => "Download Start",
+            'name' => "Docs Page",
             'opts' => array (
             )
         );
