add support for types in propertybase

--- a/tools/grunt-tasks/templates/genprops/js/class.ejs
+++ b/tools/grunt-tasks/templates/genprops/js/class.ejs
@@ -1,9 +1,9 @@
 function <%= name %>() {
   <%= base %>.call(this);
 
-  this.register({
+  this.register([
     <%- propValueStrings %>
-  });
+  ]);
 }
 exports.<%= name %> = <%= name %>;
 
