--- a/examples/internal/views/dev/jsExample.twig
+++ b/examples/internal/views/dev/jsExample.twig
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 {{ include('dev/jsIncludes.twig') }}
 <script>
-    require(["evaluation/eval_main"], function (rf) {    
+    require(["evaluation/eval_main"], function () {    
         {{ file_contents|raw }}
     });
 </script>
