--- a/examples/internal/views/dev/jsTest.twig
+++ b/examples/internal/views/dev/jsTest.twig
@@ -15,7 +15,7 @@
 
 {{ include('dev/jsIncludes.twig') }}
 <script>
-    require(["core/main"], function (rf ) {    
+    require(["core/main"], function () {    
         {{ file_contents|raw }}
         window.jasmineExecute();
     });
