added getting started to docs page and fixed last step of tour page RF-134 #resolve

--- a/docs/src/templates/razorflow_dotcom/article_templates/layout.ejs
+++ b/docs/src/templates/razorflow_dotcom/article_templates/layout.ejs
@@ -24,7 +24,8 @@ function setActive () {
 function extra_styles() {
     return array(
         'vendor/codemirror/css/codemirror.css',
-        'vendor/codemirror/theme/rftheme.css'
+        'vendor/codemirror/theme/rftheme.css',
+        'vendor/codemirror/theme/solarized.css'
     );
 }
 
