initial benchmarking tool
Test Plan: none

Reviewers: swaroop, Viral, anirudh

Reviewed By: anirudh

Differential Revision: http://phabricator.razorflow.com/D19

--- a/examples/internal/views/dev/index.twig
+++ b/examples/internal/views/dev/index.twig
@@ -12,6 +12,8 @@
 {{ macros.devExampleList (examples, 'js', 'examples') }}
 <h2>Testcases</h2>
 {{ macros.devExampleList (examples, 'js', 'testcases') }}
+<h2>Bench</h2>
+{{ macros.devExampleList (examples, 'js', 'bench') }}
 
 
 <h1>PHP</h1>
