Added option  to ChartComponent which renders a label on top of stacked columns displaying the total

--- a/jsrf/src/less/razorchart/theme.less
+++ b/jsrf/src/less/razorchart/theme.less
@@ -260,3 +260,11 @@
         stroke: none;
     }
 }
+
+.rc-column-chart {
+    text {
+        fill: @rc-axes-text-stroke;
+        stroke: none;
+        font-size: @rc-axes-text-font-size;
+    }
+}
