--- a/jsrf/src/less/theme.less
+++ b/jsrf/src/less/theme.less
@@ -727,3 +727,11 @@ div.k-state-active {
         stroke-dasharray: @rc-grid-line-dasharray;
     }
 }
+
+.rc-column-chart {
+    text {
+        fill: @rc-axes-text-stroke;
+        stroke: none;
+        font-size: @rc-axes-text-font-size;
+    }
+}
