add support for trendlines

--- a/jsrf/src/less/razorchart/theme.less
+++ b/jsrf/src/less/razorchart/theme.less
@@ -248,6 +248,11 @@
         stroke: @rc-grid-line-stroke;
     }
 
+    .rc-trendlabel {
+        fill: #800000 !important;
+        stroke: #800000 !important;
+    }
+
     text {
         fill: @rc-axes-text-stroke;
         stroke: none;
