fix minor css issue

--- a/jsrf/src/less/razorchart/theme.less
+++ b/jsrf/src/less/razorchart/theme.less
@@ -241,6 +241,11 @@
     .rc-grid-line:first-child {
         display: none;
     }
+    
+    .rc-trendlabel {
+        fill: #993333 !important;
+        stroke: #993333 !important;
+    }
 }
 
 .rc-axis {
@@ -249,8 +254,8 @@
     }
 
     .rc-trendlabel {
-        fill: #800000 !important;
-        stroke: #800000 !important;
+        fill: #993333 !important;
+        stroke: #993333 !important;
     }
 
     text {
