--- a/jsrf/src/less/theme.less
+++ b/jsrf/src/less/theme.less
@@ -701,11 +701,19 @@ div.k-state-active {
     // .rc-grid-line:first-child {
     //     display: none;
     // }
+    .rc-trendlabel {
+        fill: #993333 !important;
+        stroke: #993333 !important;
+    }
 }
 
 .rc-axis {
     .rc-grid-line {
         stroke: @rc-grid-line-stroke;
+    }
+    .rc-trendlabel {
+        fill: #993333 !important;
+        stroke: #993333 !important;
     }
 
     text {
